syntax = "proto3";

option go_package = "/proto";

service Login {
    rpc CreateLogin(CreateLoginRequest) returns (CreateLoginResponse) {};
    rpc LoginSystem(CreateLoginRequest) returns (CreateLoginSystemResponse){};
}

message CreateLoginRequest {
    string username = 1;
    string password = 2;
}

message CreateLoginResponse {}

message CreateLoginSystemResponse{
    string token = 1;
    int64 ttl = 2;
}
